--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.datasource.url: ${JDBC_DATABASE_URL:}
+logging.level.org.springframework.data.r2dbc=DEBUG
+spring.r2dbc.url=${SPRING_DATASOURCE_URL:r2dbc:pool:postgresql://admin:admin@localhost:5432/springdemo}
+#spring.r2dbc.properties.sslMode=REQUIRE
+
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
 
