--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,9 @@
 logging.level.org.springframework.data.r2dbc=DEBUG
 
-spring.r2dbc.url=r2dbc:pool:postgresql://admin:admin@localhost:5432/springdemo
 
-#spring.r2dbc.properties.sslMode=REQUIRE
+spring.r2dbc.url=r2dbc:pool:${DATABASE_URL}
+
+spring.r2dbc.properties.sslMode=REQUIRE
 
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
@@ -11,6 +12,6 @@ spring.thymeleaf.mode=HTML
 
 logging.level.org.springframework=INFO
 
-spring.profiles.active=production
+#spring.profiles.active=production
 
 server.port=${PORT:5000}
