--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
-logging.level.org.springframework.data.r2dbc=DEBUG
-spring.r2dbc.url=r2dbc:pool:postgresql://admin:admin@localhost:5432/springdemo
-server.port=${PORT:5000}
+spring.datasource.url= jdbc:postgresql://localhost:5432/springdemo
+spring.datasource.username= admin
+spring.datasource.password= admin
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+# App Properties
+bezkoder.app.jwtSecret= bezKoderSecretKey
+bezkoder.app.jwtExpirationMs= 86400000
